--- a/cp_files/nuclei_masking.cppipe.template
+++ b/cp_files/nuclei_masking.cppipe.template
@@ -17,7 +17,7 @@ Metadata:[module_num:2|svn_version:'Unknown'|variable_revision_number:6|show_win
     Extraction method count:1
     Metadata extraction method:Extract from file/folder names
     Metadata source:File name
-    Regular expression to extract from file name:T00(?P<time>\d{2})_(?P<channel>\w+)stitched-(?P<zstep>\d{1}).tif
+    Regular expression to extract from file name:T(?P<time>\d{4})_(?P<channel>\w+)stitched-(?P<zstep>\d{1}).tif
     Regular expression to extract from folder name:(?P<Date>[0-9]{4}_[0-9]{2}_[0-9]{2})$
     Extract metadata from:All images
     Select the filtering criteria:and (file does contain "")
