--- a/cp_files/nuclei_masking.cppipe.template
+++ b/cp_files/nuclei_masking.cppipe.template
@@ -1,8 +1,8 @@
 CellProfiler Pipeline: http://www.cellprofiler.org
 Version:5
-DateRevision:413
+DateRevision:421
 GitHash:
-ModuleCount:14
+ModuleCount:15
 HasImagePlaneDetails:False
 
 Images:[module_num:1|svn_version:'Unknown'|variable_revision_number:2|show_window:False|notes:['To begin creating your project, use the Images module to compile a list of files and/or folders that you want to analyze. You can also specify a set of rules to include only the desired files in your selected folders.']|batch_state:array([], dtype=uint8)|enabled:True|wants_pause:False]
@@ -17,7 +17,7 @@ Metadata:[module_num:2|svn_version:'Unknown'|variable_revision_number:6|show_win
     Extraction method count:1
     Metadata extraction method:Extract from file/folder names
     Metadata source:File name
-    Regular expression to extract from file name:T00(?P<time>\d{2})_(?P<channel>\w+)stitched-0.tif
+    Regular expression to extract from file name:(?P<prefix>\w+)_T00(?P<time>\d{2})_(?P<well>\w+)_(?P<channel>\w+).tif
     Regular expression to extract from folder name:(?P<Date>[0-9]{4}_[0-9]{2}_[0-9]{2})$
     Extract metadata from:All images
     Select the filtering criteria:and (file does contain "")
@@ -61,18 +61,80 @@ NamesAndTypes:[module_num:3|svn_version:'Unknown'|variable_revision_number:8|sho
     Maximum intensity:255.0
 
 Groups:[module_num:4|svn_version:'Unknown'|variable_revision_number:2|show_window:False|notes:['The Groups module optionally allows you to split your list of images into image subsets (groups) which will be processed independently of each other. Examples of groupings include screening batches, microtiter plates, time-lapse movies, etc.']|batch_state:array([], dtype=uint8)|enabled:True|wants_pause:False]
-    Do you want to group your images?:No
+    Do you want to group your images?:Yes
     grouping metadata count:1
-    Metadata category:None
+    Metadata category:well
 
-IdentifyPrimaryObjects:[module_num:5|svn_version:'Unknown'|variable_revision_number:14|show_window:True|notes:[]|batch_state:array([], dtype=uint8)|enabled:True|wants_pause:False]
+CorrectIlluminationCalculate:[module_num:5|svn_version:'Unknown'|variable_revision_number:2|show_window:True|notes:[]|batch_state:array([], dtype=uint8)|enabled:True|wants_pause:False]
     Select the input image:Red
+    Name the output image:IllumRed
+    Select how the illumination function is calculated:Background
+    Dilate objects in the final averaged image?:No
+    Dilation radius:1
+    Block size:45
+    Rescale the illumination function?:No
+    Calculate function for each image individually, or based on all images?:All: First cycle
+    Smoothing method:Fit Polynomial
+    Method to calculate smoothing filter size:Automatic
+    Approximate object diameter:10
+    Smoothing filter size:10
+    Retain the averaged image?:No
+    Name the averaged image:IllumBlueAvg
+    Retain the dilated image?:No
+    Name the dilated image:IllumBlueDilated
+    Automatically calculate spline parameters?:Yes
+    Background mode:auto
+    Number of spline points:5
+    Background threshold:2.0
+    Image resampling factor:2.0
+    Maximum number of iterations:40
+    Residual value for convergence:0.001
+
+CorrectIlluminationCalculate:[module_num:6|svn_version:'Unknown'|variable_revision_number:2|show_window:True|notes:[]|batch_state:array([], dtype=uint8)|enabled:True|wants_pause:False]
+    Select the input image:Blue
+    Name the output image:IllumBlue
+    Select how the illumination function is calculated:Background
+    Dilate objects in the final averaged image?:No
+    Dilation radius:1
+    Block size:45
+    Rescale the illumination function?:No
+    Calculate function for each image individually, or based on all images?:All: First cycle
+    Smoothing method:Fit Polynomial
+    Method to calculate smoothing filter size:Automatic
+    Approximate object diameter:10
+    Smoothing filter size:10
+    Retain the averaged image?:No
+    Name the averaged image:IllumBlueAvg
+    Retain the dilated image?:No
+    Name the dilated image:IllumBlueDilated
+    Automatically calculate spline parameters?:Yes
+    Background mode:auto
+    Number of spline points:5
+    Background threshold:2.0
+    Image resampling factor:2.0
+    Maximum number of iterations:40
+    Residual value for convergence:0.001
+
+CorrectIlluminationApply:[module_num:7|svn_version:'Unknown'|variable_revision_number:5|show_window:True|notes:[]|batch_state:array([], dtype=uint8)|enabled:True|wants_pause:False]
+    Select the input image:Red
+    Name the output image:CorrRed
+    Select the illumination function:IllumRed
+    Select how the illumination function is applied:Subtract
+    Select the input image:Blue
+    Name the output image:CorrBlue
+    Select the illumination function:IllumBlue
+    Select how the illumination function is applied:Subtract
+    Set output image values less than 0 equal to 0?:Yes
+    Set output image values greater than 1 equal to 1?:Yes
+
+IdentifyPrimaryObjects:[module_num:8|svn_version:'Unknown'|variable_revision_number:15|show_window:True|notes:[]|batch_state:array([], dtype=uint8)|enabled:True|wants_pause:False]
+    Select the input image:CorrRed
     Name the primary objects to be identified:IdentifyPrimaryObjects
     Typical diameter of objects, in pixel units (Min,Max):!MINSIZE!,!MAXSIZE!
     Discard objects outside the diameter range?:Yes
     Discard objects touching the border of the image?:Yes
-    Method to distinguish clumped objects:Shape
-    Method to draw dividing lines between clumped objects:Shape
+    Method to distinguish clumped objects:Intensity
+    Method to draw dividing lines between clumped objects:Intensity
     Size of smoothing filter:10
     Suppress local maxima that are closer than this minimum allowed distance:7.0
     Speed up by using lower-resolution image to find local maxima?:No
@@ -81,71 +143,36 @@ IdentifyPrimaryObjects:[module_num:5|svn_version:'Unknown'|variable_revision_num
     Automatically calculate minimum allowed distance between local maxima?:Yes
     Handling of objects if excessive number of objects identified:Continue
     Maximum number of objects:500
-    Display accepted local maxima?:No
-    Select maxima color:Blue
     Use advanced settings?:Yes
     Threshold setting version:12
     Threshold strategy:Adaptive
     Thresholding method:Minimum Cross-Entropy
     Threshold smoothing scale:1.5
-    Threshold correction factor:0.82
-    Lower and upper bounds on threshold:0.0,1.0
-    Manual threshold:0.0
+    Threshold correction factor:1
+    Lower and upper bounds on threshold:0,1.0
+    Manual threshold:0.01
     Select the measurement to threshold with:None
     Two-class or three-class thresholding?:Two classes
     Log transform before thresholding?:No
     Assign pixels in the middle intensity class to the foreground or the background?:Foreground
-    Size of adaptive window:120
+    Size of adaptive window:320
     Lower outlier fraction:0.05
     Upper outlier fraction:0.05
-    Averaging method:Mean
+    Averaging method:Median
     Variance method:Standard deviation
     # of deviations:2.0
-    Thresholding method:Minimum Cross-Entropy
+    Thresholding method:Robust Background
 
-MeasureObjectNeighbors:[module_num:6|svn_version:'Unknown'|variable_revision_number:3|show_window:True|notes:[]|batch_state:array([], dtype=uint8)|enabled:False|wants_pause:False]
-    Select objects to measure:PreFilteredObjects
-    Select neighboring objects to measure:PreFilteredObjects
-    Method to determine neighbors:Within a specified distance
-    Neighbor distance:20
-    Consider objects discarded for touching image border?:Yes
-    Retain the image of objects colored by numbers of neighbors?:No
-    Name the output image:ObjectNeighborCount
-    Select colormap:Blues
-    Retain the image of objects colored by percent of touching pixels?:No
-    Name the output image:PercentTouching
-    Select colormap:Oranges
-
-FilterObjects:[module_num:7|svn_version:'Unknown'|variable_revision_number:9|show_window:True|notes:[]|batch_state:array([], dtype=uint8)|enabled:False|wants_pause:False]
-    Select the objects to filter:PreFilteredObjects
-    Name the output objects:IdentifyPrimaryObjects
-    Select the filtering mode:Measurements
-    Select the filtering method:Limits
-    Select the objects that contain the filtered objects:None
-    Select the location of the rules or classifier file:Elsewhere...|
-    Rules or classifier file name:rules.txt
-    Class number:1
-    Measurement count:1
-    Additional object count:0
-    Assign overlapping child to:Both parents
-    Keep removed objects as a seperate set?:No
-    Name the objects removed by the filter:RemovedObjects
-    Select the measurement to filter by:Neighbors_NumberOfNeighbors_20
-    Filter using a minimum measurement value?:No
-    Minimum value:0.0
-    Filter using a maximum measurement value?:Yes
-    Maximum value:3
-
-MeasureObjectSizeShape:[module_num:8|svn_version:'Unknown'|variable_revision_number:3|show_window:True|notes:[]|batch_state:array([], dtype=uint8)|enabled:True|wants_pause:False]
+MeasureObjectSizeShape:[module_num:9|svn_version:'Unknown'|variable_revision_number:3|show_window:True|notes:[]|batch_state:array([], dtype=uint8)|enabled:True|wants_pause:False]
     Select object sets to measure:IdentifyPrimaryObjects
     Calculate the Zernike features?:No
     Calculate the advanced features?:No
 
-MeasureObjectIntensity:[module_num:9|svn_version:'Unknown'|variable_revision_number:4|show_window:True|notes:[]|batch_state:array([], dtype=uint8)|enabled:True|wants_pause:False]
-    Select images to measure:Blue, Red
+MeasureObjectIntensity:[module_num:10|svn_version:'Unknown'|variable_revision_number:4|show_window:True|notes:[]|batch_state:array([], dtype=uint8)|enabled:True|wants_pause:False]
+    Select images to measure:CorrBlue, CorrRed
     Select objects to measure:IdentifyPrimaryObjects
 
-ExportToSpreadsheet:[module_num:10|svn_version:'Unknown'|variable_revision_number:13|show_window:True|notes:[]|batch_state:array([], dtype=uint8)|enabled:True|wants_pause:False]
+ExportToSpreadsheet:[module_num:11|svn_version:'Unknown'|variable_revision_number:13|show_window:True|notes:[]|batch_state:array([], dtype=uint8)|enabled:True|wants_pause:False]
     Select the column delimiter:Comma (",")
     Add image metadata columns to your object data file?:Yes
     Add image file and folder names to your object data file?:No
@@ -169,21 +196,13 @@ ExportToSpreadsheet:[module_num:10|svn_version:'Unknown'|variable_revision_numbe
     File name:DATA.csv
     Use the object name for the file name?:Yes
 
-MaskImage:[module_num:11|svn_version:'Unknown'|variable_revision_number:3|show_window:True|notes:[]|batch_state:array([], dtype=uint8)|enabled:True|wants_pause:False]
-    Select the input image:Red
-    Name the output image:MaskRed
-    Use objects or an image as a mask?:Objects
-    Select object for mask:IdentifyPrimaryObjects
-    Select image for mask:None
-    Invert the mask?:No
-
 ConvertObjectsToImage:[module_num:12|svn_version:'Unknown'|variable_revision_number:1|show_window:True|notes:[]|batch_state:array([], dtype=uint8)|enabled:True|wants_pause:False]
     Select the input objects:IdentifyPrimaryObjects
     Name the output image:Obj_Image
     Select the color format:Color
     Select the colormap:Default
 
-SaveImages:[module_num:13|svn_version:'Unknown'|variable_revision_number:15|show_window:True|notes:['']|batch_state:array([], dtype=uint8)|enabled:True|wants_pause:False]
+SaveImages:[module_num:13|svn_version:'Unknown'|variable_revision_number:16|show_window:True|notes:['']|batch_state:array([], dtype=uint8)|enabled:True|wants_pause:False]
     Select the type of image to save:Image
     Select the image to save:Obj_Image
     Select method for constructing file names:From image filename
@@ -201,16 +220,17 @@ SaveImages:[module_num:13|svn_version:'Unknown'|variable_revision_number:15|show
     Create subfolders in the output folder?:No
     Base image folder:Elsewhere...|
     How to save the series:T (Time)
+    Save with lossless compression?:No
 
-SaveImages:[module_num:14|svn_version:'Unknown'|variable_revision_number:15|show_window:True|notes:[]|batch_state:array([], dtype=uint8)|enabled:False|wants_pause:False]
-    Select the type of image to save:Mask
-    Select the image to save:MaskRed
+SaveImages:[module_num:14|svn_version:'Unknown'|variable_revision_number:16|show_window:True|notes:[]|batch_state:array([], dtype=uint8)|enabled:True|wants_pause:False]
+    Select the type of image to save:Image
+    Select the image to save:CorrBlue
     Select method for constructing file names:From image filename
-    Select image name for file prefix:Red
+    Select image name for file prefix:Blue
     Enter single file name:_Mask
     Number of digits:4
     Append a suffix to the image file name?:Yes
-    Text to append to the image name:_Mask
+    Text to append to the image name:_corr
     Saved file format:tiff
     Output file location:Default Output Folder|
     Image bit depth:8-bit integer
@@ -220,3 +240,24 @@ SaveImages:[module_num:14|svn_version:'Unknown'|variable_revision_number:15|show
     Create subfolders in the output folder?:No
     Base image folder:Elsewhere...|
     How to save the series:T (Time)
+    Save with lossless compression?:No
+
+SaveImages:[module_num:15|svn_version:'Unknown'|variable_revision_number:16|show_window:True|notes:[]|batch_state:array([], dtype=uint8)|enabled:True|wants_pause:False]
+    Select the type of image to save:Image
+    Select the image to save:CorrRed
+    Select method for constructing file names:From image filename
+    Select image name for file prefix:Red
+    Enter single file name:_Mask
+    Number of digits:4
+    Append a suffix to the image file name?:Yes
+    Text to append to the image name:_corr
+    Saved file format:tiff
+    Output file location:Default Output Folder|
+    Image bit depth:8-bit integer
+    Overwrite existing files without warning?:No
+    When to save:Every cycle
+    Record the file and path information to the saved image?:Yes
+    Create subfolders in the output folder?:No
+    Base image folder:Elsewhere...|
+    How to save the series:T (Time)
+    Save with lossless compression?:No
